# AITestGen

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml  pytest.ini
src/aitestgen/ir/: interpreter.py  node.py  solver.py  symbolic_executor.py
src/aitestgen/llm/: client.py  json_2_prompt.py
src/aitestgen/parser/: ir_2_llm_prompt.py  python_parser.py
streamlit_ui/: app.py
tests/: test_0.py  test_1.py  test_ir_interpreter.py  test_ir_node.py  test_json_2_prompt.py  test_llm_client.py  test_llm_json_2_prompt.py  utils.py
web_app/: app.py
