[tool.poetry]
name = "aitestgen"
version = "0.2.0"
description = "AI driven test generation"
authors = ["wfchiang <weifan.wf@gmail.com>"]
readme = "README.md"
packages = [{include = "aitestgen", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
