[tool.poetry]
name = "aitestgen"
version = "0.2.1"
description = "AI driven test generation"
authors = ["wfchiang <weifan.wf@gmail.com>"]
readme = "README.md"
packages = [{include = "aitestgen", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
langchain = "^0.3.0"
langchain-community = "^0.3.0"
langchain-openai = "^0.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
